# picoha-io

./: .gitignore  README.md  behave.ini  blink.py  package.sh  ppaperwork.yml  setup.py
firmware/: Cargo.toml  Dockerfile  FW_IO.md  docker-env.sh  environment.py
firmware/.cargo/: config  pico-load
firmware/.devcontainer/: devcontainer.json
firmware/libs/protocols/src/: gpio.rs  ha.rs  lib.rs  slip.rs
firmware/src/: main.rs
firmware/src/application/: buffer.rs  gpio_ctrl.rs  mod.rs  panic.rs  protocol.rs  usbctrl.rs
firmware/src/platform/: config.rs  mod.rs
panduza_class_picoha/: __init__.py  driver_picoha_io.py  picoha_bridge.py  udev_tty.py
panduza_class_picoha/ha/device/: __init__.py
tests/: TESTS.md  docker-env.sh
tests/actions/: platform.py
tests/features/: FEATURES.md  io.feature
tests/features/rsc/: io_alias.json  io_tree.json  test-py-platform-run.py
tests/steps/: io_steps.py  time_steps.py  xdocz_helpers.py
tools/: 99-aardvark-pico-clone.rules
