[package]
name = "aardvark-rp2040-clone"
version = "0.1.0"
edition = "2021"

[env]
USB_SERIAL_NUMBER = "TEST_123456789"

[dependencies]

# Cortex support
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

# Rp pico support
rp2040-boot2 = { version = "0.2.0", optional = true }
rp-pico = "0.3.0"

# Embedded libs
embedded-time = "0.12.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }

# Usb support
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

# Queue
# bbqueue = "0.5.1" # Not ready yet for this arch atomic.fetch_add(val, order) method not found in `&AtomicUsize`

# Heapless libraries
heapless = { version = "0.7.10", features = ["serde"] }

# Serde without std + json core
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.4.0"

# To encode basic types in json
serde_repr = "0.1.9"

# To provide base64 algo
base64 = { version = "0.13.0", default-features = false }

protocols = {path="libs/protocols"}

[features]
boot2 = ["rp2040-boot2"]
